--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ nav a:hover {
   font-family: "SUSE", sans-serif;
   font-size: 2.5rem;
   font-weight: 800;
-  color: #0077B6;
+  color: #F4A261;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -185,7 +185,7 @@ nav a:hover {
   cursor: grabbing;
 }
 .card-list .card-item .card-link:hover {
-  border-color: #5372F0;
+  border-color: #2A9D8F;
 }
 .card-list .card-link .card-image {
   width: 100%;
@@ -194,7 +194,7 @@ nav a:hover {
   object-fit: cover;
 }
 .card-list .card-link .badge {
-  color: #5372F0;
+  color: #2A9D8F;
   width: fit-content;
   padding: 8px 16px;
   font-size: 0.95rem;
@@ -212,24 +212,24 @@ nav a:hover {
 .card-list .card-link .card-button {
   height: 35px;
   width: 35px;
-  color: #5372F0;
+  color: #2A9D8F;
   margin: 30px 0 5px;
   background: none;
   cursor: pointer;
   border-radius: 50%;
-  border: 2px solid #5372F0;
+  border: 2px solid #2A9D8F;
   transform: rotate(-45deg);
   transition: 0.4s ease;
 }
 .card-list .card-link:hover .card-button {
   color: #fff;
-  background: #5372F0;
+  background: #2A9D8F;
 }
 .card-wrapper .swiper-pagination-bullet {
   height: 13px;
   width: 13px;
   opacity: 0.5;
-  background: #5372F0;
+  background: #2A9D8F;
 }
 .card-wrapper .swiper-pagination-bullet-active {
   opacity: 1;
@@ -379,7 +379,7 @@ form .form-row .textarea {
   left: 0;
 }
 footer {
-  background-color: #0077B6;
+  background-color: #264653;
   color: white;
   padding: 20px 0;
   font-family: "Work Sans", system-ui;
