--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,474 +1,263 @@
+h1 {
+  font-family: "Reddit Sans Condensed", sans-serif;
+}
 
-h1{
-    font-family: "Reddit Sans Condensed", sans-serif;
-  }
-  
-  h2{
-    font-family: "Reddit Sans Condensed", sans-serif;
-  }
-  
-  h3{
-    font-family: "SUSE", sans-serif;
-  }
-  
-  p {
-    font-family: "Work Sans", system-ui;
-  }
-  
-  
-  body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  header {
-    background-color: #E9C46A;
-    width: 100%;
-  }
-  
-  nav {
-    display: flex;              
-    justify-content: space-between; 
-    align-items: center;          
-    background-color: #E9C46A;    
-    padding: 10px 20px;           
-  }
-  
-  nav h1 a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  nav h1 {
-    margin: 0;                    
-    font-family: "Reddit Sans Condensed", sans-serif;
-    font-optical-sizing: auto;
-    color: white;
-    font-weight: 500;
-    display: flex;
-    align-items: center; 
-  }
-  
-  nav h1 .material-symbols-outlined {
-    margin-right: 8px;
-    font-size: 2em;
-    line-height: 1;
-  }
-  
-  nav ul {
-    list-style: none;            
-    display: flex;                
-    gap: 20px;                   
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline;             
-  }
-  
-  nav a {
-    font-family: "Reddit Sans Condensed", sans-serif;
-    color: white;
-    font-weight: 850;
-    font-style: inherit;
-    text-decoration: none;
-    padding: 10px 20px;          
-  }
-  
-  nav a:hover {
-    color: #90E0EF;           
-  }
-  
-  .contenedor {
-    position: relative;
-    width: 100%;
-    height: auto;
-    margin: 0;
-    padding: 0;
-  }
-  
-  
-  .present {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    background-image: linear-gradient(#f4a36181,#e76f51b0),
-    url("../imagen/sunflowers-8351807_1920.jpg");
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-  }
-  
-  
-  
-  .present h1{
-    font-weight: 900px;
-    margin-bottom: 1%;
-    color: white;
-    font-size: 3rem;
-  }
-  
-  .btnpresent {
-    border: none; 
-    color: white; 
-    padding: 14px 28px; 
-    cursor: pointer;
-    font-weight: bold; 
-    border-radius: 5px; 
-    display: inline-flex;
-    align-items: center;
-    background-color: #264653;
-    transition: box-shadow 0.3s ease-in-out;
-  }
-  
-  .btnpresent i {
-    margin-right: 8px;
-    font-size: 1.2em;
-  }
-  
-  .btnpresent:hover {
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
-  }
-  
-  .present p{
-    color: white;
-    font-size: larger;
-    margin-bottom: 2.5%;
-  }
-  
-  /* seeccion */
-  .container{
-    background: linear-gradient(#ECEFFE, #C5CFFC);
-  }
-  
-  .section-title {
-    font-family: "SUSE", sans-serif;
-    font-size: 2.5rem;
-    font-weight: 800;
-    color: #F4A261;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .card-wrapper {
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 20px 10px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    overflow: hidden;
-  }
-  
-  .card-list .card-item {
-    list-style: none;
-  }
-  .card-list .card-item .card-link {
-    display: block;
-    background: #fff;
-    padding: 18px;
-    user-select: none;
-    border-radius: 12px;
-    text-decoration: none;
-    border: 2px solid transparent;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
-    transition: 0.2s ease;
-  }
-  .card-list .card-item .card-link:active {
-    cursor: grabbing;
-  }
-  .card-list .card-item .card-link:hover {
-    border-color: #2A9D8F;
-  }
-  .card-list .card-link .card-image {
-    width: 100%;
-    border-radius: 10px;
-    aspect-ratio: 16 / 9;
-    object-fit: cover;
-  }
-  .card-list .card-link .badge {
-    color: #2A9D8F;
-    width: fit-content;
-    padding: 8px 16px;
-    font-size: 0.95rem;
-    border-radius: 50px;
-    font-weight: 500;
-    background: #DDE4FF;
-    margin: 16px 0 18px;
-  }
-  
-  .card-list .card-link .card-title {
-    color: #000;
-    font-size: 1.19rem;
-    font-weight: 600;
-  }
-  .card-list .card-link .card-button {
-    height: 35px;
-    width: 35px;
-    color: #2A9D8F;
-    margin: 30px 0 5px;
-    background: none;
-    cursor: pointer;
-    border-radius: 50%;
-    border: 2px solid #2A9D8F;
-    transform: rotate(-45deg);
-    transition: 0.4s ease;
-  }
-  .card-list .card-link:hover .card-button {
-    color: #fff;
-    background: #2A9D8F;
-  }
-  .card-wrapper .swiper-pagination-bullet {
-    height: 13px;
-    width: 13px;
-    opacity: 0.5;
-    background: #2A9D8F;
-  }
-  .card-wrapper .swiper-pagination-bullet-active {
-    opacity: 1;
-  }
-  .card-wrapper .swiper-slide-button {
-    color: #5372F0;
-    margin-top: -35px;
-  }
-  @media (max-width: 768px) {
-    .card-wrapper {
-      margin: 0 10px 25px;
-    }
-    .card-wrapper .swiper-slide-button {
-      display: none;
-    }
-  }
-  
-  .SolitInfo {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "SUSE", sans-serif;
-    background-color: white;
-  }
-  
-  .info-content {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1200px;
-    width: 100%;
-  }
-  
-  .form-section {
-    width: 50%;
-  }
-  
-  .image-section {
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .doctor-image {
-    max-width: 90%;
-    height: auto;
-    border-radius: 12px;
-  }
-  
-  .text {
-    text-align: center;
-    font-size: 2.5rem;
-    font-weight: 600;
-    font-family: "SUSE", sans-serif;
-    background: -webkit-linear-gradient(right, #0077B6, #90E0EF);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-bottom: 20px;
-  }
-  
-  .SolitInfo form {
-    padding: 30px 0 0 0;
-  }
-  
-  .SolitInfo form .form-row {
-    display: flex;
-    margin: 40px 0;
-  }
-  
-  
-  form .form-row .input-data {
-    width: 100%;
-    height: 40px;
-    margin: 0 20px;
-    position: relative;
-  }
-  
-  form .form-row .textarea {
-    height: 100px;
-  }
-  
-  .input-data input,
-  .textarea textarea {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border: 2px solid rgba(0, 0, 0, 0.12);
-    font-size: 17px;
-    background-color: transparent;
-    outline: none;
-    transition: border-color 0.3s ease;
-    border-radius: 12px;
-    padding: 4px;
-  }
-  
-  .input-data input:focus,
-  .textarea textarea:focus {
-    border-color: #0077B6;
-  }
-  
-  .input-data label {
-    font-family: "SUSE", sans-serif;
-    position: absolute;
-    pointer-events: none;
-    left: 20px; /* Mejor alineación del label */
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 16px;
-    color: rgba(0, 0, 0, 0.6);
-    transition: all 0.3s ease;
-  }
-  
-  .input-data input:focus ~ label,
-  .input-data input:not(:placeholder-shown) ~ label,
-  .textarea textarea:focus ~ label,
-  .textarea textarea:not(:placeholder-shown) ~ label {
-    top: -10px;
-    font-size: 14px;
-    color: #0077B6;
-  }
-  
-  .submit-btn .input-data {
-    overflow: hidden;
-    height: 45px !important;
-    width: 25% !important;
-    margin: 0 auto;
-  }
-  
-  .submit-btn .input-data input {
-    background: #90E0EF;
-    border: none;
-    font-family: "SUSE", sans-serif;
-    color: #2c79ac;
-    font-size: 17px;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    cursor: pointer;
-    border-radius: 20px;
-    position: relative;
-    z-index: 2;
-  }
-  
-  .submit-btn .input-data:hover .inner {
-    left: 0;
-  }
-  footer {
-    background-color: #264653;
-    color: white;
-    padding: 20px 0;
-    font-family: "Work Sans", system-ui;
-  }
-  
-  .footer-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
-  
-  .footer-content, .footer-contact {
-    width: 45%; /* Ajusta según sea necesario */
-  }
-  
-  .footer-content h3, .footer-contact h4 {
-    font-family: "SUSE", sans-serif;
-    font-weight: 700;
-  }
-  
-  .footer-contact a {
-    color: #90E0EF;
-    text-decoration: none;
-  }
-  
-  .footer-contact a:hover {
-    text-decoration: underline;
-  }
-  
-  .footer-content p, .footer-contact p {
-    margin: 5px 0;
-  }
-  
-  .footer-copyright {
-    text-align: center;
-    padding-top: 20px;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    margin-top: 20px;
-    font-size: 14px;
-  }
-  .video-wrapper {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-content: center;
+h2 {
+  font-family: "Reddit Sans Condensed", sans-serif;
+}
+
+p {
+  font-family: "Work Sans", system-ui;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  background-color: #e9c46a;
+  width: 100%;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #e9c46a;
+  padding: 10px 20px;
+}
+
+nav h1 a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+}
+
+nav h1 {
+  margin: 0;
+  font-family: "Reddit Sans Condensed", sans-serif;
+  color: white;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+
+nav h1 .material-symbols-outlined {
+  margin-right: 8px;
+  font-size: 2em;
+  line-height: 1;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+nav a {
+  font-family: "Reddit Sans Condensed", sans-serif;
+  color: white;
+  font-weight: 850;
+  text-decoration: none;
+  padding: 10px 20px;
+}
+
+nav a:hover {
+  color: #90e0ef;
+}
+
+.container {
+  background: linear-gradient(#eceffe, #c5cffc);
+}
+
+.section-title {
+  font-family: "SUSE", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: #f4a261;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.card-wrapper {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 20px 10px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+
+.card-list .card-item {
+  list-style: none;
+}
+
+.card-list .card-item .card-link {
+  display: block;
+  background: #fff;
+  padding: 18px;
+  user-select: none;
+  border-radius: 12px;
+  text-decoration: none;
+  border: 2px solid transparent;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
+  transition: 0.2s ease;
+}
+
+.card-list .card-item .card-link:hover {
+  border-color: #2a9d8f;
+}
+
+.card-list .card-link .card-image {
+  width: 100%;
+  border-radius: 10px;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+}
+
+.card-list .card-link .badge {
+  color: #2a9d8f;
+  width: fit-content;
+  padding: 8px 16px;
+  font-size: 0.95rem;
+  border-radius: 50px;
+  font-weight: 500;
+  background: #dde4ff;
+  margin: 16px 0 18px;
+}
+
+.card-list .card-link .card-title {
+  color: #000;
+  font-size: 1.19rem;
+  font-weight: 600;
+}
+
+.card-list .card-link .card-button {
+  height: 35px;
+  width: 35px;
+  color: #2a9d8f;
+  margin: 30px 0 5px;
+  background: none;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 2px solid #2a9d8f;
+  transform: rotate(-45deg);
+  transition: 0.4s ease;
+}
+
+.card-list .card-link:hover .card-button {
+  color: #fff;
+  background: #2a9d8f;
+}
+
+.card-wrapper .swiper-pagination-bullet {
+  height: 13px;
+  width: 13px;
+  opacity: 0.5;
+  background: #2a9d8f;
+}
+
+.card-wrapper .swiper-pagination-bullet-active {
+  opacity: 1;
+}
+
+.card-wrapper .swiper-slide-button {
+  color: #5372f0;
+  margin-top: -35px;
+}
+
+.video-wrapper {
+  display: flex;
+  justify-content: center; /* Centrar el contenedor principal */
+  flex-wrap: wrap; /* Permitir que los elementos se ajusten en filas */
+  align-content: center;
 }
 
 .video-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap; /* Hacer que los videos se ajusten en filas */
+  justify-content: center; /* Centrar los videos */
 }
 
 .video-item {
-    flex: 1 1 100%; /* Los items ocuparán todo el ancho */
-    display: flex;
-    max-width: 50%;
-    margin-bottom: 20px; /* Separación entre cada video */
+  flex: 1 1 45%; /* Cada video ocupa el 45% del ancho, ajustado para 2 columnas */
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente el video */
+  margin: 10px; /* Separación entre los videos */
+}
+
+.video-item:nth-child(3) {
+  flex: 1 1 100%; /* El tercer video ocupa toda la fila */
 }
 
 .video-content {
-    display: flex;
-    align-items: center; /* Centra verticalmente el video y el texto */
-    gap: 20px; /* Espacio entre el video y el texto */
-    width: 150%;
+  display: flex;
+  align-items: center; /* Centra verticalmente el video */
+  gap: 20px;
 }
 
 .video-content video {
-    width: 50%; /* El video ocupará la mitad del espacio disponible */
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  width: 100%; /* Ajusta al 100% del contenedor */
+  max-width: 600px; /* Limita el tamaño máximo del video */
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.video-text {
-    width: 50%; /* El texto ocupará la otra mitad del espacio */
+
+footer {
+  background-color: #264653;
+  color: white;
+  padding: 20px 0;
+  font-family: "Work Sans", system-ui;
 }
 
-.video-title {
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 600;
-    margin-bottom: 10px;
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
-.video-text p {
-    font-family: 'Work Sans', sans-serif;
-    font-size: 1rem;
-    line-height: 1.5;
+.footer-content,
+.footer-contact {
+  width: 45%;
 }
 
+.footer-content h3,
+.footer-contact h4 {
+  font-family: "SUSE", sans-serif;
+  font-weight: 700;
+}
+
+.footer-contact a {
+  color: #90e0ef;
+  text-decoration: none;
+}
+
+.footer-contact a:hover {
+  text-decoration: underline;
+}
+
+.footer-content p,
+.footer-contact p {
+  margin: 5px 0;
+}
+
+.footer-copyright {
+  text-align: center;
+  padding-top: 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  margin-top: 20px;
+  font-size: 14px;
+}
