--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ nav a:hover {
   align-items: center;
 }
 
-.doctor-image {
+.flor-image {
   max-width: 90%;
   height: auto;
   border-radius: 12px;
